# intensity-normalization

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .yamllint.yaml  AUTHORS.rst  CLAUDE.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  create_env.sh  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  documentation.md  feature-request.md
.github/workflows/: codeql-analysis.yml  publish.yml  python-app.yml  python-publish.yml  tests.yml
docs/: Makefile  algorithm.rst  cli.rst  conf.py  index.rst  installation.rst  intensity_normalization.cli.rst  intensity_normalization.normalize.rst  intensity_normalization.plot.rst  intensity_normalization.rst  intensity_normalization.util.rst  make.bat  modules.rst  readme.rst  requirements.txt  usage.rst  user_guide.tex
docs/source/: algorithm.rst  conf.py  exec.rst  index.rst  normalization.rst  plot.rst  utilities.rst
intensity_normalization/: __init__.py  base_cli.py  cli.py  errors.py  parse.py  type.py  typing.py
intensity_normalization/cli/: coregister.py  fcm.py  fcm_normalize.py  histogram.py  kde.py  lsq.py  nyul.py  preprocess.py  ravel.py  tissue_membership.py  whitestripe.py  zscore.py
intensity_normalization/exec/: coregister.py  fcm-normalize  fcm_normalize  fcm_normalize.py  gmm-normalize  gmm_normalize  gmm_normalize.py  hm-normalize  hm_normalize  hm_normalize.py  kde-normalize  kde_normalize  kde_normalize.py  lsq_normalize.py  norm_quality.py  normalize_intensity.py  nyul_normalize.py  plot-hists  plot_histograms  plot_hists.py  preprocess  preprocess.py  ravel-normalize  ravel_normalize  ravel_normalize.py  robex  robex.py  tissue-mask  tissue_mask.py  ws-normalize  ws_normalize  ws_normalize.py  zscore-normalize  zscore_normalize.py
intensity_normalization/normalize/: __init__.py  base.py  fcm.py  gmm.py  hm.py  kde.py  lsq.py  nyul.py  ravel.py  whitestripe.py  zscore.py
intensity_normalization/plot/: __init__.py  hist.py  histogram.py  quality.py
intensity_normalization/util/: coregister.py  histogram_tools.py  io.py  preprocess.py  tissue_mask.py  tissue_membership.py
intensity_normalization/utilities/: __init__.py  csf.py  hist.py  io.py  mask.py  preprocess.py  quality.py  register.py  robex.py
src/intensity_normalization/: __init__.py  cli.py
src/intensity_normalization/adapters/: __init__.py  images.py  io.py
src/intensity_normalization/domain/: __init__.py  exceptions.py  models.py  protocols.py
src/intensity_normalization/normalizers/: __init__.py
src/intensity_normalization/normalizers/individual/: __init__.py  fcm.py  kde.py  whitestripe.py  zscore.py
src/intensity_normalization/normalizers/population/: __init__.py  lsq.py  nyul.py
src/intensity_normalization/services/: __init__.py  normalization.py  validation.py
tests/: __init__.py  conftest.py  run_all_clis.sh  test_ants_required_funcs.py  test_exec.py  test_intensity_normalization.py  test_mask.py  test_normalize.py  test_normalizers.py  test_plot.py  test_services.py  test_utilities.py
tutorials/: 5min_tutorial.md  5min_tutorial.rst
