[bumpversion]
current_version = 2.1.1
commit = True
tag = True

[bumpversion:file:intensity_normalization/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
per-file-ignores = 
	__init__.py: F401
max-line-length = 88
extend-ignore = E203

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[metadata]
author = Jacob Reinhold
author_email = jcreinhold@gmail.com
name = intensity-normalization
version = attr: intensity_normalization.__version__
description = normalize the intensities of various MR image modalities
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
keywords = intensity, normalization, mri
license = Apache Software License 2.0
license_file = LICENSE
url = https://github.com/jcreinhold/intensity-normalization
project_urls = 
	Bug Tracker = https://github.com/jcreinhold/intensity-normalization/issues
	Documentation = https://intensity-normalization.readthedocs.io/
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.6
install_requires = 
	matplotlib
	nibabel
	numpy
	scikit-image
	scikit-learn
	scikit-fuzzy
	scipy
	statsmodels
setup_requires = 
	pytest-runner
test_suite = tests
tests_require = 
	pytest>=3

[options.packages.find]
include = 
	intensity_normalization
	intensity_normalization.*
exclude = 
	tests
	docs

[options.extras_require]
ants = antspyx>=0.2.7

[options.entry_points]
console_scripts = 
	fcm-normalize = intensity_normalization.cli.fcm:fcm_main
	kde-normalize = intensity_normalization.cli.kde:kde_main
	lsq-normalize = intensity_normalization.cli.lsq:lsq_main
	nyul-normalize = intensity_normalization.cli.nyul:nyul_main
	ws-normalize = intensity_normalization.cli.whitestripe:whitestripe_main
	zscore-normalize = intensity_normalization.cli.zscore:zscore_main
	plot-histograms = intensity_normalization.cli.histogram:histogram_main
	tissue-membership = intensity_normalization.cli.tissue_membership:tissue_membership_main
	ravel-normalize = intensity_normalization.cli.ravel:ravel_main [ants]
	preprocess = intensity_normalization.cli.preprocess:preprocess_main [ants]
	coregister = intensity_normalization.cli.coregister:coregister_main [ants]
