[bumpversion]
current_version = 2.1.4
commit = True
tag = False

[bumpversion:file:intensity_normalization/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[flake8]
exclude = docs
per-file-ignores =
	__init__.py: F401
max-line-length = 88
extend-ignore = E203

[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules --ignore=setup.py
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER
testpaths =
	tests

[metadata]
author = Jacob Reinhold
author_email = jcreinhold@gmail.com
name = intensity-normalization
version = attr: intensity_normalization.__version__
description = normalize the intensities of various MR image modalities
long_description = file: docs/readme.rst, HISTORY.rst
long_description_content_type = text/x-rst
keywords = intensity, normalization, mri
license = Apache Software License 2.0
license_file = LICENSE
url = https://github.com/jcreinhold/intensity-normalization
project_urls =
	Bug Tracker = https://github.com/jcreinhold/intensity-normalization/issues
	Documentation = https://intensity-normalization.readthedocs.io/
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Typing :: Typed

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
	nibabel>=3,<4
	numpy>=1.21,<2
	pillow>=9.0.0
    pydicom>=2.2.2,<3
    pymedio>=0.2.0,<1
	scikit-fuzzy>=0.4.2,<1
	scikit-image>=0.17,<1
	scikit-learn>=0.24,<2
	scipy>=1.5,<2
    SimpleITK>=2.1.0,<3
	statsmodels>=0.12,<1
test_suite = tests

[options.packages.find]
include =
	intensity_normalization
	intensity_normalization.*
exclude =
	tests
	docs

[options.package_data]
intensity_normalization = py.typed

[options.extras_require]
ants = antspyx>=0.2.7
plot = matplotlib>=3,<4

[options.entry_points]
console_scripts =
	fcm-normalize = intensity_normalization.cli.fcm:fcm_main
	kde-normalize = intensity_normalization.cli.kde:kde_main
	lsq-normalize = intensity_normalization.cli.lsq:lsq_main
	nyul-normalize = intensity_normalization.cli.nyul:nyul_main
	ws-normalize = intensity_normalization.cli.whitestripe:whitestripe_main
	zscore-normalize = intensity_normalization.cli.zscore:zscore_main
	plot-histograms = intensity_normalization.cli.histogram:histogram_main
	tissue-membership = intensity_normalization.cli.tissue_membership:tissue_membership_main
	ravel-normalize = intensity_normalization.cli.ravel:ravel_main [ants]
	preprocess = intensity_normalization.cli.preprocess:preprocess_main [ants]
	coregister = intensity_normalization.cli.coregister:coregister_main [ants]
