[metadata]
name = intensity_normalization
version = attr: intensity_normalization.__version__
description = normalize the intensities of various MR image modalities
long_description = file: docs/readme.rst, HISTORY.rst
long_description_content_type = text/x-rst
url = https://github.com/jcreinhold/intensity-normalization
author = Jacob Reinhold
author_email = jcreinhold@gmail.com
license = Apache Software License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed
keywords = intensity, normalization, mri
project_urls =
    Bug Tracker = https://github.com/jcreinhold/intensity-normalization/issues
    Documentation = https://intensity-normalization.readthedocs.io/

[options]
packages = find:
install_requires =
    SimpleITK>=2.1.0,<3
    nibabel>=3,<4
    numpy>=1.22,<2
    pillow>=9.0.0
    pydicom>=2.2.2,<3
    pymedio>=0.2.8,<1
    scikit-fuzzy>=0.4.2,<1
    scikit-image>=0.17,<1
    scikit-learn>=0.24,<2
    scipy>=1.5,<2
    statsmodels>=0.12,<1
python_requires = >=3.9
include_package_data = True
test_suite = tests
zip_safe = False

[options.packages.find]
exclude =
    tests
    docs
include =
    intensity_normalization
    intensity_normalization.*

[options.entry_points]
console_scripts =
    fcm-normalize = intensity_normalization.cli.fcm:fcm_main
    kde-normalize = intensity_normalization.cli.kde:kde_main
    lsq-normalize = intensity_normalization.cli.lsq:lsq_main
    nyul-normalize = intensity_normalization.cli.nyul:nyul_main
    ws-normalize = intensity_normalization.cli.whitestripe:whitestripe_main
    zscore-normalize = intensity_normalization.cli.zscore:zscore_main
    plot-histograms = intensity_normalization.cli.histogram:histogram_main [plot]
    tissue-membership = intensity_normalization.cli.tissue_membership:tissue_membership_main
    ravel-normalize = intensity_normalization.cli.ravel:ravel_main [ants]
    preprocess = intensity_normalization.cli.preprocess:preprocess_main [ants]
    coregister = intensity_normalization.cli.coregister:coregister_main [ants]

[options.extras_require]
ants =
    antspyx>=0.2.7
plot =
    matplotlib>=3,<4

[options.package_data]
intensity_normalization = py.typed

[bumpversion]
current_version = 2.2.4
commit = True
tag = False

[bumpversion:file:intensity_normalization/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[flake8]
count = True
doctests = True
exclude = docs
extend-ignore = E203
per-file-ignores =
    __init__.py: F401
max-line-length = 88
statistics = True

[aliases]
test = pytest

[tool:pytest]
addopts = --ignore=setup.py
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER
testpaths =
    intensity_normalization
    tests
